Criado o endpoint para encerramento de Viagem
